@@ -93,63 +93,31 @@ Ltac Field_simplify lemma Cond_lemma req Cst_tac :=
         let mkFV := FFV Cst_tac radd rmul rsub ropp rdiv rinv in
         let mkFE := mkFieldexpr C Cst_tac radd rmul rsub ropp rdiv rinv in
         let simpl_field H := protect_fv "field" in H in
-        (fun f rl => (f mkFV mkFE simpl_field lemma req rl;
-                      try (apply Cond_lemma; simpl_PCond req)))
+        fun f rl => f mkFV mkFE simpl_field lemma req rl;
+                    try (apply Cond_lemma; simpl_PCond req)
     | _ => fail 1 "field anomaly: bad correctness lemma (rewr)"
     end in
   Make_tac ReflexiveRewriteTactic.
 (* Pb: second rewrite are applied to non-zero condition of first rewrite... *)
 
 Tactic Notation (at level 0) "field_simplify" constr_list(rl) :=
-  field_lookup (fun req cst_tac _ _ field_simplify_ok cond_ok pre post rl =>
-    (pre(); Field_simplify field_simplify_ok cond_ok req cst_tac; post())).
+  field_lookup
+    (fun req cst_tac _ _ field_simplify_ok cond_ok pre post rl =>
+       pre(); Field_simplify field_simplify_ok cond_ok req cst_tac rl; post()).
 
 
 (* Generic form of field tactics *)
 Ltac Field_Scheme FV_tac SYN_tac SIMPL_tac lemma Cond_lemma req :=
-  let ParseLemma :=
-    match type of lemma with
-    | forall l fe1 fe2 nfe1 nfe2, _ = nfe1 -> _ = nfe2 -> _ -> 
-      PCond _ _ _ _ _ _ _ _ _ ->
-      req (@FEeval ?R ?rO _ _ _ _ _ _ _ _ l fe1) _ =>
-        (fun f => f R rO)
-    | _ => fail 1 "field anomaly: bad correctness lemma (scheme)" 
-    end in
-  let ParseExpr2 ilemma :=
-    match type of ilemma with
-      forall nfe1 nfe2, ?fe1 = nfe1 -> ?fe2 = nfe2 -> _ => (fun f => f fe1 fe2)
-    | _ => fail 1 "field anomaly: cannot find norm expression"
-    end in
-  let Main r1 r2 R rO :=
-    let fv := FV_tac r1 (@List.nil R) in
-    let fv := FV_tac r2 fv in
-    let fe1 := SYN_tac r1 fv in
-    let fe2 := SYN_tac r2 fv in
-    ParseExpr2 (lemma fv fe1 fe2)
-    ltac:(fun nfrac_val1 nfrac_val2 =>
-          (let nfrac1 := fresh "frac1" in 
-           let norm_hyp1 := fresh "norm_frac1" in
-          (compute_assertion norm_hyp1 nfrac1 nfrac_val1;
-           let nfrac2 := fresh "frac2" in 
-           let norm_hyp2 := fresh "norm_frac2" in
-          (compute_assertion norm_hyp2 nfrac2 nfrac_val2;
-           (apply (lemma fv fe1 fe2 nfrac1 nfrac2 norm_hyp1 norm_hyp2)
-            || fail "field anomaly: failed in applying lemma");
-           [ SIMPL_tac | apply Cond_lemma; simpl_PCond req];
-           try clear nfrac1 nfrac2 norm_hyp1 norm_hyp2)))) in
-  ParseLemma ltac:(OnEquation req Main).
-
-Ltac Field_Scheme_n FV_tac SYN_tac SIMPL_tac lemma Cond_lemma req :=
   let R := match type of req with ?R -> _ => R end in
   let rec ParseExpr ilemma :=
     match type of ilemma with
       forall nfe, ?fe = nfe -> _ =>
         (fun t => 
-          (let x := fresh "fld_expr" in 
+           let x := fresh "fld_expr" in 
            let H := fresh "norm_fld_expr" in
-           (compute_assertion H x fe;
-            ParseExpr (ilemma x H) t;
-            try clear x H)))
+           compute_assertion H x fe;
+           ParseExpr (ilemma x H) t;
+           try clear x H)
     | _ => (fun t => t ilemma)
     end in
   let Main r1 r2 :=
@@ -159,8 +127,8 @@ Ltac Field_Scheme_n FV_tac SYN_tac SIMPL_tac lemma Cond_lemma req :=
     let fe2 := SYN_tac r2 fv in
     ParseExpr (lemma fv fe1 fe2)
     ltac:(fun ilemma =>
-           ((apply ilemma || fail "field anomaly: failed in applying lemma");
-           [ SIMPL_tac | apply Cond_lemma; simpl_PCond req])) in
+           apply ilemma || fail "field anomaly: failed in applying lemma";
+            [ SIMPL_tac | apply Cond_lemma; simpl_PCond req]) in
   OnEquation req Main.
 
 (* solve completely a field equation, leaving non-zero conditions to be
@@ -170,13 +138,14 @@ Ltac Field lemma Cond_lemma req Cst_tac :=
     let mkFV := FFV Cst_tac radd rmul rsub ropp rdiv rinv in
     let mkFE := mkFieldexpr C Cst_tac radd rmul rsub ropp rdiv rinv in
     let Simpl :=
-      vm_compute; (reflexivity || fail "not a valid field equation") in
-    Field_Scheme_n mkFV mkFE Simpl lemma Cond_lemma req in
+      vm_compute; reflexivity || fail "not a valid field equation" in
+    Field_Scheme mkFV mkFE Simpl lemma Cond_lemma req in
   ParseFieldComponents lemma req Main.
 
 Tactic Notation (at level 0) "field" :=
-  field_lookup (fun req cst_tac field_ok _ _ cond_ok pre post rl =>
-    (pre(); Field field_ok cond_ok req cst_tac; post())).
+  field_lookup
+    (fun req cst_tac field_ok _ _ cond_ok pre post rl =>
+       pre(); Field field_ok cond_ok req cst_tac; post()).
 
 (* transforms a field equation to an equivalent (simplified) ring equation,
    and leaves non-zero conditions to be proved (field_simplify_eq) *)
@@ -185,13 +154,14 @@ Ltac Field_simplify_eq lemma Cond_lemma req Cst_tac :=
     let mkFV := FFV Cst_tac radd rmul rsub ropp rdiv rinv in
     let mkFE := mkFieldexpr C Cst_tac radd rmul rsub ropp rdiv rinv in
     let Simpl := (protect_fv "field") in
-    Field_Scheme_n mkFV mkFE Simpl lemma Cond_lemma req in
+    Field_Scheme mkFV mkFE Simpl lemma Cond_lemma req in
   ParseFieldComponents lemma req Main.
 
-Tactic Notation (at level 0) "field_simplify_eq" constr_list(rl) :=
-  field_lookup (fun req cst_tac _ field_simplify_eq_ok _ cond_ok pre post rl =>
-    (pre(); Field_simplify_eq field_simplify_eq_ok cond_ok req cst_tac;
-     post())) rl.
+Tactic Notation (at level 0) "field_simplify_eq" :=
+  field_lookup
+    (fun req cst_tac _ field_simplify_eq_ok _ cond_ok pre post rl =>
+       pre(); Field_simplify_eq field_simplify_eq_ok cond_ok req cst_tac;
+       post()).
 
 (* Adding a new field *)
 
